--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,19 @@
 {
     "ignorePatterns": ["dist/*/**.js"],
-    "extends": "airbnb"
+    "extends": [
+        "airbnb",
+        "airbnb-typescript"
+    ],
+    "parserOptions": {
+        "project": ["./tsconfig.json"]
+    },
+    "parser": "@typescript-eslint/parser",
+    "rules": {
+        "import/prefer-default-export": "off",
+        "no-underscore-dangle": "off",
+        "import/no-unresolved": "error"
+    },
+    "env":    {
+        "browser": true
+    }
 }
