--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
       }
     }
   },
+  "staticFiles": {
+    "staticPath": "netlify",
+    "staticOutPath": "/"
+    },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "@babel/core": "^7.19.6",
     "@babel/eslint-parser": "7.18.9",
     "@babel/plugin-transform-typescript": "7.19.0",
     "@parcel/transformer-pug": "2.7.0",
@@ -27,8 +32,7 @@
     "eslint": "8.22.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "install": "0.13.0",
-    "npm": "8.19.1",
+    "parcel-reporter-static-files-copy": "1.4.0",
     "os-browserify": "^0.3.0",
     "parcel": "2.7.0",
     "parcel-transformer-pug-precompile": "1.0.6",
